# oxiai

./: Cargo.toml
src/: busy_lot.rs  main.rs
src/chat/: mod.rs
src/data/: american_crow_example1_message.md  american_crow_wikipedia.md  black_bear_wikipedia.md  tools_list.json
src/tool/: tools_list.json
src/ui/: mod.rs
