[package]
name = "oxiai"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0" }
ratatui = { version = "0.29.0" }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
